--- a/.github/workflows/sphinx-gh-pages.yml
+++ b/.github/workflows/sphinx-gh-pages.yml
@@ -39,9 +39,30 @@ jobs:
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
-      - run: sphinx-apidoc -o docs opengsq
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Install sphinx and docs dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -U sphinx
+          python -m pip install -r docs/requirements.txt
+
+      - name: Sphinx API Documentation Generation
+        run: sphinx-apidoc -o docs opengsq
+
+      - name: Sphinx HTML Documentation Build
+        run: sphinx-build -b html docs docs/_build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: "docs/_build"
           
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: sphinx-notes/pages@v3
+        uses: actions/deploy-pages@v4
