--- a/.github/workflows/sphinx-gh-pages.yml
+++ b/.github/workflows/sphinx-gh-pages.yml
@@ -45,9 +45,10 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install sphinx and docs dependencies
+      - name: Install sphinx and dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install .
           python -m pip install -U sphinx
           python -m pip install -r docs/requirements.txt
 
