--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
         "ms-python.autopep8",
         "ms-python.vscode-pylance",
         "ms-python.python",
-        "donjayamanne.python-environment-manager"
+        "donjayamanne.python-environment-manager",
+        "njpwerner.autodocstring",
+        "ms-python.black-formatter"
     ]
 }
