--- a/.github/workflows/sphinx-gh-pages.yml
+++ b/.github/workflows/sphinx-gh-pages.yml
@@ -53,7 +53,7 @@ jobs:
           python -m pip install -r docs/requirements.txt
 
       - name: Sphinx API Documentation Generation
-        run: sphinx-apidoc -o docs opengsq/api
+        run: sphinx-apidoc -o docs/api opengsq
 
       - name: Sphinx HTML Documentation Build
         run: sphinx-build -b html docs docs/_build
