--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    # Use ubuntu-20.04 since ubuntu-22.04 doesn't support python 3.6
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
