--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,8 +35,8 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=221 --statistics --exclude tests
-      - name: Test with pytest
-        run: |
-          pytest
-        env:
-          STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
+      # - name: Test with pytest
+      #   run: |
+      #     pytest
+      #   env:
+      #     STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
