--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,23 +18,24 @@ jobs:
         python-version: [3.9, "3.10", 3.11, 3.12, 3.13]
 
     steps:
-      - uses: actions/checkout@v6
+      - name: Checkout
+        uses: actions/checkout@v6
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install flake8 pytest
-          python -m pip install .
+          pip install --upgrade pip
+          pip install .
+          pip install -r tests/requirements.txt
           if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
-      - name: Lint with flake8
+
+      - name: Lint with ruff
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 opengsq --count --exit-zero --max-complexity=10 --max-line-length=221 --statistics --exclude tests
+          ruff check
       # - name: Test with pytest
       #   run: |
       #     pytest
