--- a/.github/workflows/sphinx-gh-pages.yml
+++ b/.github/workflows/sphinx-gh-pages.yml
@@ -47,9 +47,9 @@ jobs:
 
       - name: Install sphinx and dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .
-          python -m pip install -r docs/requirements.txt
+          pip install --upgrade pip
+          pip install .
+          pip install -r docs/requirements.txt
 
       - name: Sphinx API Documentation Generation
         run: sphinx-apidoc -o docs/api opengsq
