Update VSCode extension recommendations
Removed 'python-environment-manager', 'autodocstring', and 'black-formatter' from the recommended extensions list, keeping only essential Python extensions.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,9 +2,6 @@
     "recommendations": [
         "ms-python.autopep8",
         "ms-python.vscode-pylance",
-        "ms-python.python",
-        "donjayamanne.python-environment-manager",
-        "njpwerner.autodocstring",
-        "ms-python.black-formatter"
+        "ms-python.python"
     ]
 }
